--- a/src/webview/themes/catppuccin-latte.css
+++ b/src/webview/themes/catppuccin-latte.css
@@ -14,7 +14,7 @@
 .theme-catppuccin-latte .tiptap {
   --crepe-color-background: #eff1f5;
   --crepe-color-on-background: #4c4f69;
-  --crepe-color-surface: #ccd0da;
+  --crepe-color-surface: #DCE0E8;
   --crepe-color-outline: #8c8fa1;
   --crepe-color-primary: #8839ef;
   --crepe-color-inline-code: #d20f39;
