--- a/src/webview/themes/crepe-dark.css
+++ b/src/webview/themes/crepe-dark.css
@@ -13,7 +13,7 @@
 .theme-crepe-dark .tiptap {
   --crepe-color-background: #1f1b16;
   --crepe-color-on-background: #eae1d9;
-  --crepe-color-surface: #18120b;
+  --crepe-color-surface: #2A241D;
   --crepe-color-outline: #9c8f80;
   --crepe-color-primary: #f4bd6f;
   --crepe-color-inline-code: #ffb4ab;
