--- a/src/webview/themes/nord.css
+++ b/src/webview/themes/nord.css
@@ -14,9 +14,10 @@
   --crepe-color-background: #fdfcff;
   --crepe-color-on-background: #1b1c1d;
   --crepe-color-surface: #f8f9ff;
-  --crepe-color-outline: #73777f;
+  --crepe-color-outline: #D8DEE9;
   --crepe-color-primary: #37618e;
   --crepe-color-inline-code: #ba1a1a;
+  --crepe-color-highlight: #EBCB8B;
 
   --crepe-font-default: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
   --crepe-font-code: "Cascadia Code", "JetBrains Mono", Menlo, Monaco, "Courier New", monospace;
